# Dyvo.ua

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/: auto-assign.yml
containers/: compose.yaml
containers/caddy/: Caddyfile
containers/pgadmin/: servers.json
containers/postgres/: initdb.sql
docs/: LEGAL.md  README.md  TECH_STACK.md
src/project_core/: asgi.py  settings.py  urls.py  wsgi.py
src/users/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_managers_and_more.py  0003_customuser_about_customuser_facebook_and_more.py  0004_customuser_avatar.py  0005_remove_customuser_telegram_customuser_contacts.py  0006_event.py  0007_remove_event_social_links_event_social1_and_more.py
src/users/static/users/css/: auth.css  login.css
src/users/static/users/js/: register.js
src/users/templates/users/: account.html  host_register.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_sent.html  register.html  reset_password.html  terms.html
staticfiles/: README.md
